jena-shex/src/test/files/spec/negativeSyntax/tripleConsraint-with-dot-and-datatype.shex
# tripleConsraint with dot and datatype
<http://a.example/IssueShape> {
   <http://a.example/p1> . <http://a.example/dt1>
}
